--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -24,13 +24,15 @@
                         android:layout_gravity="center"
                         android:layout_marginBottom="@dimen/spacing_normal_16">
 
-            <ImageButton android:layout_width="@dimen/btn_round_size_40"
-                         android:layout_height="@dimen/btn_round_size_40"
-                         android:background="@drawable/btn_round_bg"
-                         android:src="@drawable/ic_brightness_high_black_24dp"
-                         android:layout_toLeftOf="@id/iv_avatar"
-                         android:layout_marginRight="@dimen/spacing_huge_32"
-                         android:layout_marginTop="36dp"/>
+            <ImageButton
+                    android:id="@+id/btn_switch_theme"
+                    android:layout_width="@dimen/btn_round_size_40"
+                    android:layout_height="@dimen/btn_round_size_40"
+                    android:background="@drawable/btn_round_bg"
+                    android:src="@drawable/ic_brightness_high_black_24dp"
+                    android:layout_toLeftOf="@id/iv_avatar"
+                    android:layout_marginRight="@dimen/spacing_huge_32"
+                    android:layout_marginTop="36dp"/>
 
             <ImageView
                     android:id="@+id/iv_avatar"
@@ -39,35 +41,33 @@
                     android:src="@drawable/avatar_default"
                     android:layout_centerHorizontal="true"/>
 
-            <ImageButton android:layout_width="@dimen/btn_round_size_40"
-                         android:layout_height="@dimen/btn_round_size_40"
-                         android:background="@drawable/btn_round_bg"
-                         android:src="@drawable/ic_edit_black_24dp"
-                         android:layout_toRightOf="@id/iv_avatar"
-                         android:layout_marginLeft="@dimen/spacing_huge_32"
-                         android:layout_marginTop="36dp"/>
+            <ImageButton
+                    android:id="@+id/btn_edit"
+                    android:layout_width="@dimen/btn_round_size_40"
+                    android:layout_height="@dimen/btn_round_size_40"
+                    android:background="@drawable/btn_round_bg"
+                    android:src="@drawable/ic_edit_black_24dp"
+                    android:layout_toRightOf="@id/iv_avatar"
+                    android:layout_marginLeft="@dimen/spacing_huge_32"
+                    android:layout_marginTop="36dp"/>
 
             <TextView
-                    android:id="@+id/tv_name"
+                    style="@style/Profile.Header.Nickname"
+                    android:id="@+id/tv_nick_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/iv_avatar"
                     android:layout_centerHorizontal="true"
                     android:text="John Doe"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/font_large_20"
-                    android:fontFamily="sans-serif-medium"
-                    android:layout_marginTop="@dimen/spacing_normal_16"
             />
             <TextView
+                    style="@style/Profile.Header.Rank"
                     android:id="@+id/tv_rank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_name"
+                    android:layout_below="@id/tv_nick_name"
                     android:layout_centerHorizontal="true"
                     android:text="Junior Android Developer"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/font_normal_16"
             />
         </RelativeLayout>
     </FrameLayout>
@@ -75,7 +75,7 @@
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
-                  android:background="@color/color_primary_light">
+                  android:background="?attr/colorAccentedSurface">
 
         <LinearLayout android:layout_width="0dp"
                       android:layout_height="wrap_content"
@@ -85,20 +85,19 @@
                       android:paddingTop="@dimen/spacing_normal_16"
                       android:paddingBottom="@dimen/spacing_normal_16">
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:textColor="@android:color/white"
-                      android:textSize="@dimen/font_large_20"
-                      android:text="0"
-                      android:fontFamily="sans-serif-medium"
-                      android:drawableLeft="@drawable/ic_sp_24"
-                      android:drawablePadding="@dimen/spacing_tiny_4"/>
+            <TextView
+                    style="@style/Profile.Metrics.Value"
+                    android:id="@+id/tv_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:drawableLeft="@drawable/ic_sp_24"/>
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:textColor="@android:color/white"
-                      android:textSize="@dimen/font_normal_16"
-                      android:text="@string/profile_label_respect"/>
+            <TextView
+                    style="@style/Profile.Metrics.Label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/profile_label_respect"/>
         </LinearLayout>
 
         <View android:layout_width="1dp"
@@ -115,28 +114,28 @@
                       android:paddingTop="@dimen/spacing_normal_16"
                       android:paddingBottom="@dimen/spacing_normal_16">
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:textColor="@android:color/white"
-                      android:textSize="@dimen/font_large_20"
-                      android:text="0"
-                      android:fontFamily="sans-serif-medium"
-                      android:drawableLeft="@drawable/ic_respect_24"
-                      android:drawablePadding="@dimen/spacing_tiny_4"/>
+            <TextView
+                    style="@style/Profile.Metrics.Value"
+                    android:id="@+id/tv_respect"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:drawableLeft="@drawable/ic_respect_24"/>
 
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:textColor="@android:color/white"
-                      android:textSize="@dimen/font_normal_16"
-                      android:text="@string/profile_label_respect"/>
+            <TextView
+                    style="@style/Profile.Metrics.Label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/profile_label_respect"/>
 
 
         </LinearLayout>
     </LinearLayout>
 
-    <RelativeLayout android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/spacing_normal_16">
+    <RelativeLayout
+            style="@style/Profile.InfoItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <ImageView
                 android:id="@+id/ic_avatar"
@@ -152,16 +151,15 @@
                 android:layout_marginLeft="@dimen/spacing_normal_16">
 
             <EditText
+                    style="@style/Profile.EditText.Single"
                     android:id="@+id/et_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/profile_hint_first_name"
-                    android:text="John"
-                    android:textColor="@color/color_primary"
-                    android:paddingTop="4dp"
-                    android:enabled="false"
-            android:focusableInTouchMode="false"
-            android:focusable="false"/>
+                    tools:text="John"
+                    android:inputType="textPersonName"
+                    android:imeOptions="actionNext"
+            />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -174,38 +172,44 @@
                 android:layout_below="@+id/wr_first_name">
 
             <EditText
+                    style="@style/Profile.EditText.Single"
                     android:id="@+id/et_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/profile_hint_last_name"
-                    android:text="Doe"
-                    android:textColor="@color/color_primary"
-                    android:paddingTop="4dp"/>
+                    tools:text="Doe"
+                    android:inputType="textPersonName"
+                    android:imeOptions="actionNext"
+            />
 
         </com.google.android.material.textfield.TextInputLayout>
     </RelativeLayout>
 
     <View android:layout_width="match_parent"
           android:layout_height="1dp"
-          android:background="@color/color_divider_dark"
+          android:background="?attr/colorDivider"
           android:layout_marginLeft="@dimen/space_maximum_72"/>
 
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal"
-                  android:padding="@dimen/spacing_normal_16">
+    <LinearLayout
+            style="@style/Profile.InfoItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <ImageView android:layout_width="@dimen/btn_round_size_40"
                    android:layout_height="@dimen/btn_round_size_40"
                    android:src="@drawable/ic_about"/>
 
         <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/wr_about"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/spacing_normal_16">
+                android:layout_marginLeft="@dimen/spacing_normal_16"
+                app:counterMaxLength="128">
 
             <EditText
+                    style="@style/Profile.EditText.MultiLine"
                     android:id="@+id/et_about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -217,13 +221,14 @@
 
     <View android:layout_width="match_parent"
           android:layout_height="1dp"
-          android:background="@color/color_divider_dark"
+          android:background="?attr/colorDivider"
           android:layout_marginLeft="@dimen/space_maximum_72"/>
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal"
-                  android:padding="@dimen/spacing_normal_16">
+    <LinearLayout
+            style="@style/Profile.InfoItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <ImageView android:layout_width="@dimen/btn_round_size_40"
                    android:layout_height="@dimen/btn_round_size_40"
@@ -233,21 +238,27 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"
                 android:layout_weight="1">
 
             <EditText
+                    style="@style/Profile.EditText.Single"
                     android:id="@+id/et_repository"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/profile_hint_repository"/>
+                    android:hint="@string/profile_hint_repository"
+                    android:inputType="textUri"
+                    android:imeOptions="actionDone"
+            />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <ImageView android:layout_width="24dp"
-                   android:layout_height="24dp"
-                   android:src="@drawable/ic_eye_24dp"
-                   android:layout_gravity="center_vertical"/>
+        <ImageView
+                android:id="@+id/ic_eye"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_eye_24dp"
+                android:layout_marginLeft="@dimen/spacing_normal_16"
+                android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
 
